# Domain-Adaptive-LLM-Fine-Tuning-for-Enterprise-Policy-QA

./: .gitignore  Modelfile  README.md  dataquality.py  generated_prompt.py  preprocessing.py  pyproject.toml  syntheticdatageneration.py  train.py
checkpoints/: adapter_config.json
data/: instructionquality.json
